<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/compatibility02_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/compatibility02_title_txt" />
    

    <TextView
        android:id="@+id/compatibility02_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/compatibility02_instruction_txt" />
    <EditText android:id="@+id/phone_number_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="numberSigned"
        android:gravity="center"
        android:hint="@string/enter_your_phone_number_txt"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/your_birthday_text" />
    <DatePicker
        android:id="@+id/compatibility02_datePicker"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:calendarViewShown="false" />
    <Button
        android:id="@+id/compatibility02_btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:text="Result" />

    <include layout="@layout/main_menu" >
    </include>

</LinearLayout>