<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="center"
        android:orientation="vertical" 
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/zodiac_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bach_duog" />

        <LinearLayout
            android:id="@+id/astrology_menu_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/astrology_menu_today"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_today_txt" 
                android:onClick="onAstMenuClick"/>

            <Button
                android:id="@+id/astrology_menu_new_week"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_new_week_txt" 
                android:onClick="onAstMenuClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/astrology_menu_ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/astrology_menu_new_month"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_new_month_txt"
                android:onClick="onAstMenuClick" />

            <Button
                android:id="@+id/astrology_menu_new_year"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_new_year_txt" 
                android:onClick="onAstMenuClick"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/astrology_menu_ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/astrology_menu_random_date"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_random_date_txt" 
                android:onClick="onAstMenuClick"
                />

            <Button
                android:id="@+id/astrology_menu_random_week"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/astrology_menu_margin"
                android:layout_marginRight="@dimen/astrology_menu_margin"
                android:layout_weight="1"
                android:text="@string/astrology_menu_random_week_txt" 
                android:onClick="onAstMenuClick"
                />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/main_menu" />

</LinearLayout>